2020-05-08-tree-sitter-rust/corpus/multitive_expr.txt
========
multitive_expr
========

a * b / c;

x / y * z();

--------

(source_file
  (div_expr_open
    (mul_expr_open (IDENT) (IDENT))
    (IDENT))
  (mul_expr_open
    (div_expr_open (IDENT) (IDENT))
    (call_expr (IDENT))))
