2020-05-08-tree-sitter-rust/corpus/semi.txt
========
semi
========

;;

fn() {
    ;;
    a;;
    b;;
    c
}

;;

fn() {
    ;;
    let x = y;;
}

;;

--------

(source_file (fn_expr_closed (block (IDENT) (IDENT) (IDENT))) (fn_expr_closed (block (let_decl_open (IDENT) (IDENT)))))
